# FractalRenderer

./: .gitignore  .project  Libraries - Shortcut.lnk  Main.py  Messenger.py  README.md  main.py  requirements.txt  setup.py  speed_test.py  test.py
client/: .classpath  .project  job.txt  log_2017.06.04.15.07.14.txt  log_2017.06.04.15.07.45.txt  log_2017.06.04.15.07.54.txt  log_2017.06.05.09.20.53.txt  wav.txt
client/custom/: HistogramLayer.java  MyLayer.java  TriangleAverageLayer.java
client/doc/: allclasses-frame.html  allclasses-noframe.html  deprecated-list.html  help-doc.html  overview-frame.html  overview-summary.html  serialized-form.html
client/fractals/: my MASTAPIECE.fractal  newFractal.fractal  temp.fractal  test.fractal
client/src/: ClientTest.java  ServerTest.java
docs/: constant-values.html  index.html  overview-tree.html
docs/application/: Main.html
docs/fractal/: RenderManager.html
docs/index-files/: index-20.html  index-23.html
docs/menus/: NetworkCreationTool.html  NetworkElement.html  RegisterLayerTool.html  package-use.html
docs/server/: package-use.html
docs/util/: package-summary.html
fractals/: README.md  test.py
fractals/include/: Color.h  ColorPy.h  Fractal.h  FractalPy.h  HistogramLayer.h  HistogramLayerPy.h  (+6 more)
legacy-java/: README.md
model/: Layer.py
modules/rust/: .gitignore  Cargo.toml  README.md
modules/rust/fractal/: __init__.py
modules/rust/src/: fractal.rs  lib.rs
src/: fractal.rs  lib.rs
tests/: SpeedResults.md  speed_tests.py  unit_tests.py
view/: FractalWindow.py  OptionsWindow.py  gradient.py
(+292 files in other folders)
